--- a/DesctopHITE/AppDateFolder/StyleFolder/PageDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/PageDictionary.xaml
@@ -1,10 +1,16 @@
 ﻿<ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <!--#region AuthorizationPage-->
-    <Style x:Key="AuthorizationPageStyle" TargetType="Page">
-        <Setter Property="Width" Value="796"/>
-        <Setter Property="Height" Value="416"/>
+    <Style x:Key="MenuUserPageStyle" TargetType="Page">
+        <Setter Property="Width" Value="279"/>
+        <Setter Property="Height" Value="870"/>
     </Style>
-    <!--#endregion-->
+    <Style x:Key="MainUserPageStyle" TargetType="Page">
+        <Setter Property="Width" Value="1321"/>
+        <Setter Property="Height" Value="870"/>
+    </Style>
+    <Style x:Key="MenuSettingsPageStyle" TargetType="Page">
+        <Setter Property="Width" Value="1321"/>
+        <Setter Property="Height" Value="80"/>
+    </Style>
 </ResourceDictionary>
