--- a/DesctopHITE/AppDateFolder/StyleFolder/StackPanelDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/StackPanelDictionary.xaml
@@ -11,4 +11,22 @@
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
     </Style>
+    <Style x:Key="MainMenuStackPanelStyle" TargetType="StackPanel">
+        <Setter Property="Orientation" Value="Vertical"/>
+        <Setter Property="VerticalAlignment" Value="Top"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="Margin" Value="0 10 0 0"/>
+    </Style>
+    <Style x:Key="MenuContentStackPanelStyle" TargetType="StackPanel">
+        <Setter Property="Orientation" Value="Horizontal"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="Margin" Value="25px 0 0 0"/>
+    </Style>
+    <Style x:Key="OtherMenuStackPanelStyle" TargetType="StackPanel">
+        <Setter Property="Orientation" Value="Horizontal"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="Margin" Value="25 0 0 0"/>
+    </Style>
 </ResourceDictionary>
