--- a/DesctopHITE/AppDateFolder/StyleFolder/ToggleButtonDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/ToggleButtonDictionary.xaml
@@ -1,18 +1,43 @@
 ﻿<ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style x:Key="ModeAuthorizationToggleButtonStyle" TargetType="ToggleButton">
-        <Setter Property="Background" Value="#09092a"/> 
+    <Style x:Key="MainMenuToggleButtonStyle" TargetType="ToggleButton">
+        <Setter Property="Background" Value="Transparent"/> 
         <Setter Property="BorderBrush" Value="Transparent"/>
-        <Setter Property="Foreground" Value="#d5d5f6"/>
+        <Setter Property="Foreground" Value="#9a9a9a"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="FontFamily" Value="Consolas"/>
         <Setter Property="FontSize" Value="20"/>
-        <Setter Property="Width" Value="220"/>
-        <Setter Property="Height" Value="50"/>
+        <Setter Property="Width" Value="246"/>
+        <Setter Property="Height" Value="70"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Cursor" Value="Hand"/> 
+        <Setter Property="Margin" Value="0 1.5 0 1.5"/> 
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="ToggleButton">
+                    <Border
+                        CornerRadius="10"
+                        Background="{TemplateBinding Background}">
+                        <ContentPresenter HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="#2a2a2a"/>
+                            <Setter Property="Foreground" Value="#a4a4a4"/>
+                        </Trigger>
+                        <Trigger Property="IsChecked" Value="True">
+                            <Setter Property="Foreground" Value="#f5f5f5"/>
+                            <Setter Property="Background" Value="#202020"/> 
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    <Style x:Key="OtherMenuToggleButtonStyle" TargetType="ToggleButton" BasedOn="{StaticResource MainMenuToggleButtonStyle}">
+        <Setter Property="Margin" Value="1.5 0 1.5 0"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="ToggleButton">
@@ -23,11 +48,10 @@
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Background" Value="#0d0d37"/>
+                            <Setter Property="Foreground" Value="#a4a4a4"/>
                         </Trigger>
                         <Trigger Property="IsChecked" Value="True">
-                            <Setter Property="Foreground" Value="#f1f1fc"/>
-                            <Setter Property="Background" Value="#19196B"/> 
+                            <Setter Property="Foreground" Value="#f5f5f5"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
