--- a/DesctopHITE/AppDateFolder/StyleFolder/WindowsDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/WindowsDictionary.xaml
@@ -3,7 +3,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="AuthorizationWindowStyle" TargetType="Window">
         <Setter Property="WindowStyle" Value="None"/>
-        <!--<Setter Property="Icon" Value="\ContentFolder\ImageFolder\MiIcon.png"/>-->
+        <Setter Property="Icon" Value="\ContentFolder\ImageFolder\Icon_DesctopHITE.png"/>
         <Setter Property="ResizeMode" Value="CanMinimize"/>
         <Setter Property="AllowsTransparency" Value="True"/>
         <Setter Property="Background" Value="Transparent"/>
@@ -14,7 +14,7 @@
     </Style>
     <Style x:Key="MainWinwosStyle" TargetType="Window">
         <Setter Property="WindowStyle" Value="None"/>
-        <!--<Setter Property="Icon" Value="\ContentFolder\ImageFolder\MiIcon.png"/>-->
+        <Setter Property="Icon" Value="\ContentFolder\ImageFolder\Icon_DesctopHITE.png"/>
         <Setter Property="ResizeMode" Value="CanMinimize"/>
         <Setter Property="AllowsTransparency" Value="True"/>
         <Setter Property="Background" Value="Transparent"/>
