--- a/DesctopHITE/PerformanceFolder/WindowsFolder/MainUserWindow.xaml
+++ b/DesctopHITE/PerformanceFolder/WindowsFolder/MainUserWindow.xaml
@@ -48,10 +48,18 @@
                 </StackPanel>
             </Grid>
             <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="279"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
                 <Frame 
-                    x:Name="Main_Frame"
+                    x:Name="MenuFrame"
                     NavigationUIVisibility="Hidden"
-                    Grid.Row="1"/>
+                    Grid.Column="0"/>
+                <Frame 
+                    x:Name="MainFrame"
+                    NavigationUIVisibility="Hidden"
+                    Grid.Column="1"/>
             </Grid>
         </Grid>
     </Border>
