--- a/DesctopHITE/AppDateFolder/StyleFolder/TextBlockDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/TextBlockDictionary.xaml
@@ -2,7 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="ControlPanelTextBlockStyle" TargetType="TextBlock">
-        <Setter Property="Foreground" Value="#ffffff"/>
+        <Setter Property="Foreground" Value="#f5f5f5"/>
         <Setter Property="FontFamily" Value="Consolas"/>
         <Setter Property="FontSize" Value="15"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
@@ -10,7 +10,7 @@
         <Setter Property="Margin" Value="10 0 0 0"/>
     </Style>
     <Style x:Key="IconTextBlockStyle" TargetType="TextBlock">
-        <Setter Property="Foreground" Value="#ffffff"/>
+        <Setter Property="Foreground" Value="#f5f5f5"/>
         <Setter Property="FontFamily" Value="\ContentFolder\FontFolder\#Material-Design-Iconic-Font"/>
         <Setter Property="FontSize" Value="20"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
@@ -39,7 +39,7 @@
         <Setter Property="IsHitTestVisible" Value="False"/>
     </Style>
     <Style x:Key="MainStyleTextBlock" TargetType="TextBlock">
-        <Setter Property="Foreground" Value="#FFFFFF"/>
+        <Setter Property="Foreground" Value="#f5f5f5"/>
         <Setter Property="FontFamily" Value="Consolas"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
