--- a/DesctopHITE/AppDateFolder/StyleFolder/PageDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/PageDictionary.xaml
@@ -1,19 +1,19 @@
 ﻿<ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style x:Key="MenuUserPageStyle" TargetType="Page">
+    <Style x:Key="MenuUserPageStyle" TargetType="Page"> <!--Меню слева-->
         <Setter Property="Width" Value="279"/>
         <Setter Property="Height" Value="870"/>
     </Style>
-    <Style x:Key="MainUserPageStyle" TargetType="Page">
+    <Style x:Key="MainUserPageStyle" TargetType="Page"> <!--Пространство взаимодействия-->
         <Setter Property="Width" Value="1321"/>
         <Setter Property="Height" Value="870"/>
     </Style>
-    <Style x:Key="MenuSettingsPageStyle" TargetType="Page">
+    <Style x:Key="MenuSpacePageStyle" TargetType="Page"> <!--Меню в пространстве взаимодействия-->
         <Setter Property="Width" Value="1321"/>
         <Setter Property="Height" Value="80"/>
     </Style>
-    <Style x:Key="SettingsPageStyle" TargetType="Page">
+    <Style x:Key="BodySpacePageStyle" TargetType="Page"> <!--Тело в пространстве взаимодействия-->
         <Setter Property="Width" Value="1321"/>
         <Setter Property="Height" Value="790"/>
     </Style>
