--- a/DesctopHITE/PerformanceFolder/PageFolder/SettingsBodyFolder/DevelopersPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/SettingsBodyFolder/DevelopersPage.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:DesctopHITE.PerformanceFolder.PageFolder.SettingsBodyFolder"
       mc:Ignorable="d" 
-      Style="{DynamicResource SettingsPageStyle}">
+      Style="{DynamicResource BodySpacePageStyle}">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="250"/>
