--- a/DesctopHITE/AppDateFolder/StyleFolder/BorderDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/BorderDictionary.xaml
@@ -14,4 +14,11 @@
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="CornerRadius" Value="10"/>
     </Style>
+    <Style x:Key="BorderInformationWorker" TargetType="Border">
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="BorderBrush" Value="#f5f5f5"/>
+        <Setter Property="BorderThickness" Value="2"/>
+        <Setter Property="CornerRadius" Value="10"/>
+        <Setter Property="Margin" Value="0 10 0 10"/>
+    </Style>
 </ResourceDictionary>
