--- a/DesctopHITE/PerformanceFolder/WindowsFolder/AuthorizationWindow.xaml
+++ b/DesctopHITE/PerformanceFolder/WindowsFolder/AuthorizationWindow.xaml
@@ -48,7 +48,7 @@
             </Grid>
             <Grid Grid.Row="1">
                 <Grid>
-                    <StackPanel Style="{DynamicResource AuthorizationStackPanelStyle}">
+                    <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
                         <Image
                             Source="\ContentFolder\ImageFolder\Icon_DesctopHITE.png"
                             VerticalAlignment="Top"
