--- a/DesctopHITE/AppDateFolder/StyleFolder/StackPanelDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/StackPanelDictionary.xaml
@@ -1,32 +1,33 @@
 ﻿<ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style x:Key="ControlPanelStackPanelStyle" TargetType="StackPanel">
+    <Style x:Key="ControlPanelStackPanelStyle" TargetType="StackPanel"> <!--Для кнопок управления-->
         <Setter Property="Orientation" Value="Horizontal"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Right"/>
     </Style>
-    <Style x:Key="AuthorizationStackPanelStyle" TargetType="StackPanel">
-        <Setter Property="Orientation" Value="Vertical"/>
-        <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="HorizontalAlignment" Value="Center"/>
-    </Style>
-    <Style x:Key="MainMenuStackPanelStyle" TargetType="StackPanel">
+    <Style x:Key="MainMenuStackPanelStyle" TargetType="StackPanel"> <!--Для главного миню-->
         <Setter Property="Orientation" Value="Vertical"/>
         <Setter Property="VerticalAlignment" Value="Top"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="Margin" Value="0 10 0 0"/>
     </Style>
-    <Style x:Key="MenuContentStackPanelStyle" TargetType="StackPanel">
+    <Style x:Key="MenuContentStackPanelStyle" TargetType="StackPanel"> <!--Для контента внутри кнопки-->
         <Setter Property="Orientation" Value="Horizontal"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="Margin" Value="25px 0 0 0"/>
     </Style>
-    <Style x:Key="OtherMenuStackPanelStyle" TargetType="StackPanel">
+    <Style x:Key="OtherMenuStackPanelStyle" TargetType="StackPanel"> <!--Для меню внутри страницы, которые вызываются главным меню-->
         <Setter Property="Orientation" Value="Horizontal"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Left"/>
         <Setter Property="Margin" Value="25 0 0 0"/>
+    </Style>
+    <Style x:Key="TextBlockDominatesTextBoxStackPanel" TargetType="StackPanel"> <!--TextBlock доминирует над TextBox-->
+        <Setter Property="Orientation" Value="Vertical"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="Margin" Value="0 10 0 10"/>
     </Style>
 </ResourceDictionary>
