--- a/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/NewWorkerPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/NewWorkerPage.xaml
@@ -10,25 +10,57 @@
         <StackPanel Margin="0 10 0 0" VerticalAlignment="Top" HorizontalAlignment="Center">
             <Border Style="{DynamicResource BorderInformationWorker}" Margin="0 0 0 10">
                 <Grid Margin="10">
-                    <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
-                        <TextBlock 
-                            HorizontalAlignment="Left"
-                            Margin="10 0 0 0"
-                            Style="{DynamicResource MainStyleTextBlock}"
-                            Text="Фамилия"/>
-                        <TextBox
-                            Style="{DynamicResource MainTextBoxStyle}"
-                            Width="320"/>
-                    </StackPanel>
-                    <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
-                        <TextBlock 
-                            HorizontalAlignment="Left"
-                            Margin="10 0 0 0"
-                            Style="{DynamicResource MainStyleTextBlock}"
-                            Text="Имя"/>
-                        <TextBox
-                            Style="{DynamicResource MainTextBoxStyle}"
-                            Width="320"/>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="1*"/>
+                    </Grid.RowDefinitions>
+                    <StackPanel Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Vertical">
+                        <StackPanel Margin="0 0 0 5" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
+                            <TextBlock 
+                                Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"
+                                Text="Паспорт выдан"/>
+                            <TextBox
+                                TextWrapping="Wrap"
+                                MaxHeight="130"
+                                Style="{DynamicResource MainTextBoxStyle}"
+                                Width="520"/>
+                        </StackPanel>
+                        <StackPanel Margin="0 5 0 5" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
+                            <StackPanel Margin="0 0 15 0" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
+                                <TextBlock 
+                                    Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"
+                                    Text="Дата выдачи"/>
+                                <TextBox
+                                    Style="{DynamicResource MainTextBoxStyle}"
+                                    Width="250"/>
+                            </StackPanel>
+                            <StackPanel Margin="15 0 0 0" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
+                                <TextBlock 
+                                    Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"
+                                    Text="Код подразделения"/>
+                                <TextBox
+                                    Style="{DynamicResource MainTextBoxStyle}"
+                                    Width="240"/>
+                            </StackPanel>
+                        </StackPanel>
+                        <StackPanel Margin="0 5 0 5" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
+                            <StackPanel Margin="0 0 35 0" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
+                                <TextBlock 
+                                    Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"
+                                    Text="Серия паспорта"/>
+                                <TextBox
+                                    Style="{DynamicResource MainTextBoxStyle}"
+                                    Width="200"/>
+                            </StackPanel>
+                            <StackPanel Margin="35 0 0 0" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
+                                <TextBlock 
+                                    Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"
+                                    Text="Номер паспорта"/>
+                                <TextBox
+                                    Style="{DynamicResource MainTextBoxStyle}"
+                                    Width="250"/>
+                            </StackPanel>
+                        </StackPanel>
                     </StackPanel>
                 </Grid>
             </Border>
