--- a/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/NewWorkerPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/NewWorkerPage.xaml
@@ -14,7 +14,7 @@
                         <RowDefinition Height="1*"/>
                         <RowDefinition Height="1*"/>
                     </Grid.RowDefinitions>
-                    <StackPanel Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Vertical">
+                    <StackPanel Margin="0 0 0 5" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Vertical">
                         <StackPanel Margin="0 0 0 5" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
                             <TextBlock 
                                 Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"
@@ -23,10 +23,10 @@
                                 TextWrapping="Wrap"
                                 MaxHeight="130"
                                 Style="{DynamicResource MainTextBoxStyle}"
-                                Width="520"/>
+                                Width="600"/>
                         </StackPanel>
                         <StackPanel Margin="0 5 0 5" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
-                            <StackPanel Margin="0 0 15 0" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
+                            <StackPanel Margin="0 0 55 0" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
                                 <TextBlock 
                                     Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"
                                     Text="Дата выдачи"/>
@@ -34,7 +34,7 @@
                                     Style="{DynamicResource MainTextBoxStyle}"
                                     Width="250"/>
                             </StackPanel>
-                            <StackPanel Margin="15 0 0 0" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
+                            <StackPanel Margin="55 0 0 0" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
                                 <TextBlock 
                                     Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"
                                     Text="Код подразделения"/>
@@ -43,8 +43,8 @@
                                     Width="240"/>
                             </StackPanel>
                         </StackPanel>
-                        <StackPanel Margin="0 5 0 5" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
-                            <StackPanel Margin="0 0 35 0" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
+                        <StackPanel Margin="0 5 0 0" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
+                            <StackPanel Margin="0 0 75 0" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
                                 <TextBlock 
                                     Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"
                                     Text="Серия паспорта"/>
@@ -52,7 +52,7 @@
                                     Style="{DynamicResource MainTextBoxStyle}"
                                     Width="200"/>
                             </StackPanel>
-                            <StackPanel Margin="35 0 0 0" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
+                            <StackPanel Margin="75 0 0 0" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
                                 <TextBlock 
                                     Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"
                                     Text="Номер паспорта"/>
@@ -62,6 +62,64 @@
                             </StackPanel>
                         </StackPanel>
                     </StackPanel>
+                    <Grid Grid.Row="1">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="230"/>
+                            <ColumnDefinition Width="1*"/>
+                        </Grid.ColumnDefinitions>
+                        <StackPanel Margin="0 5 0 0" Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="1">
+                            <StackPanel Margin="0 0 0 5" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
+                                <TextBlock
+                                    Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"
+                                    Text="Фамилия"/>
+                                <TextBox
+                                    Width="370"
+                                    Style="{DynamicResource MainTextBoxStyle}"/>
+                            </StackPanel>
+                            <StackPanel Margin="0 5 0 5" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
+                                <TextBlock
+                                    Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"
+                                    Text="Имя"/>
+                                <TextBox
+                                    Width="370"
+                                    Style="{DynamicResource MainTextBoxStyle}"/>
+                            </StackPanel>
+                            <StackPanel Margin="0 5 0 5" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
+                                <TextBlock
+                                    Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"
+                                    Text="Отчество"/>
+                                <TextBox
+                                    Width="370"
+                                    Style="{DynamicResource MainTextBoxStyle}"/>
+                            </StackPanel>
+                            <StackPanel Margin="0 5 0 5" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
+                                <StackPanel Margin="0 0 5 0" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
+                                    <TextBlock
+                                        Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"
+                                        Text="Пол"/>
+                                    <TextBox
+                                        Width="130"
+                                        Style="{DynamicResource MainTextBoxStyle}"/>
+                                </StackPanel>
+                                <StackPanel Margin="5 0 0 0"  Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
+                                    <TextBlock
+                                        Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"
+                                        Text="Дата рождения"/>
+                                    <TextBox
+                                        Width="230"
+                                        Style="{DynamicResource MainTextBoxStyle}"/>
+                                </StackPanel>
+                            </StackPanel>
+                            <StackPanel Margin="0 5 0 0" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
+                                <TextBlock
+                                    Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"
+                                    Text="Место рождения"/>
+                                <TextBox
+                                    Width="370"
+                                    Style="{DynamicResource MainTextBoxStyle}"/>
+                            </StackPanel>
+                        </StackPanel>
+                    </Grid>
                 </Grid>
             </Border>
         </StackPanel>
