--- a/DesctopHITE/AppDateFolder/StyleFolder/ToggleButtonDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/ToggleButtonDictionary.xaml
@@ -20,7 +20,7 @@
                     <Border
                         CornerRadius="10"
                         Background="{TemplateBinding Background}">
-                        <ContentPresenter HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                        <ContentPresenter Margin="10 0 0 0" HorizontalAlignment="Left" VerticalAlignment="Center"/>
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
