--- a/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/NewWorkerPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/NewWorkerPage.xaml
@@ -11,6 +11,30 @@
             <ColumnDefinition Width="300"/>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
+        <StackPanel Style="{DynamicResource MainMenuStackPanelStyle}" Grid.Column="0">
+            <ToggleButton
+                IsChecked="True"
+                Content="Паспорт"
+                Style="{DynamicResource MainMenuToggleButtonStyle}"/>
+            <ToggleButton
+                Content="Место жительства"
+                Style="{DynamicResource MainMenuToggleButtonStyle}"/>
+            <ToggleButton
+                Content="Медецинская книжка"
+                Style="{DynamicResource MainMenuToggleButtonStyle}"/>
+            <ToggleButton
+                Content="СНИЛС"
+                Style="{DynamicResource MainMenuToggleButtonStyle}"/>
+            <ToggleButton
+                Content="ИНН"
+                Style="{DynamicResource MainMenuToggleButtonStyle}"/>
+            <ToggleButton
+                Content="Заработная карта"
+                Style="{DynamicResource MainMenuToggleButtonStyle}"/>
+            <ToggleButton
+                Content="Общие данные"
+                Style="{DynamicResource MainMenuToggleButtonStyle}"/>
+        </StackPanel>
         <ScrollViewer Grid.Column="1">
             <StackPanel Margin="0 10 0 0" VerticalAlignment="Top" HorizontalAlignment="Center">
                 <Border Style="{DynamicResource BorderInformationWorker}" Margin="0 0 0 10">
