--- a/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/NewWorkerPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/NewWorkerPage.xaml
@@ -37,7 +37,7 @@
         </StackPanel>
         <ScrollViewer Grid.Column="1">
             <StackPanel Margin="0 10 0 0" VerticalAlignment="Top" HorizontalAlignment="Center">
-                <Border Style="{DynamicResource BorderInformationWorker}" Margin="0 0 0 10">
+                <Border Visibility="Collapsed" Style="{DynamicResource BorderInformationWorker}" Margin="0 0 0 10">
                     <Grid Margin="10">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="1*"/>
@@ -176,6 +176,72 @@
                                 </StackPanel>
                             </StackPanel>
                         </Grid>
+                    </Grid>
+                </Border>
+                <Border Visibility="Visible" Style="{DynamicResource BorderInformationWorker}">
+                    <Grid Margin="10">
+                        <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
+                            <StackPanel HorizontalAlignment="Center" Margin="0 0 0 5" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
+                                <TextBlock
+                                    Margin="0"
+                                    Text="Зарегистрирован"
+                                    Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"
+                                    HorizontalAlignment="Center"/>
+                                <TextBox
+                                    Width="300"
+                                    Style="{DynamicResource MainTextBoxStyle}"/>
+                            </StackPanel>
+                            <StackPanel Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
+                                <TextBlock
+                                    Text="Регион"
+                                    Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"/>
+                                <TextBox
+                                    Width="600"
+                                    Style="{DynamicResource MainTextBoxStyle}"/>
+                            </StackPanel>
+                            <StackPanel Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
+                                <TextBlock
+                                    Text="Район"
+                                    Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"/>
+                                <TextBox
+                                    Width="600"
+                                    Style="{DynamicResource MainTextBoxStyle}"/>
+                            </StackPanel>
+                            <StackPanel Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
+                                <TextBlock
+                                    Text="Пункт"
+                                    Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"/>
+                                <TextBox
+                                    Width="600"
+                                    Style="{DynamicResource MainTextBoxStyle}"/>
+                            </StackPanel>
+                            <StackPanel Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
+                                <TextBlock
+                                    Text="Улица"
+                                    Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"/>
+                                <TextBox
+                                    Width="600"
+                                    Style="{DynamicResource MainTextBoxStyle}"/>
+                            </StackPanel>
+                            <StackPanel Margin="0 5 0 0" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
+                                <StackPanel Margin="0 0 70 0" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
+                                    <TextBlock
+                                        Text="Дом"
+                                        Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"/>
+                                    <TextBox
+                                        Width="230"
+                                        Style="{DynamicResource MainTextBoxStyle}"/>
+                                </StackPanel>
+                                <StackPanel Margin="70 0 0 0" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
+                                    <TextBlock
+                                        Text="Квартира"
+                                        Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"/>
+                                    <TextBox
+                                        Width="230"
+                                        Style="{DynamicResource MainTextBoxStyle}"/>
+                                </StackPanel>
+                            </StackPanel>
+                        </StackPanel>
                     </Grid>
                 </Border>
             </StackPanel>
